--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   
   <div id="app"></div>
-  <script type="module" src="views/layout/home.html"></script>
+  <script src="views/layout/home.html"></script>
 </body>
 
 </html>
